# ELT_Dags_Dagster_Mflix

./: .gitignore  README.md  pyproject.toml  setup.py
.dlt/: .sources  config.toml
adhoc/: ratings.json
dagster_mflix/: definitions.py
dagster_mflix/assests/: adhoc.py  mongodb.py  movies.py
dagster_mflix/jobs/: __init__.py
dagster_mflix/schedules/: __init__.py
dagster_mflix/sensors/: __init__.py
data/: movie_engagement.csv  top_movies_by_month.csv
