[project]
name = "dagster_mflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pdm>=2.25.9",
    "dagster-snowflake>=0.27.11",
    "dlt[snowflake]>=1.12.1",
    "scikit-learn>=1.6.1",
    "pymongo>=4.15.1",
    "dagster-embedded-elt>=0.27.11",
    "dagster-webserver>=1.11.11",
    "pandas>=2.3.2",
    "matplotlib>=3.9.4",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_mflix.definitions"
code_location_name = "dagster_mflix"

[tool.setuptools.packages.find]
exclude=["dagster_mflix_tests"]
